src/trusted/validator_arm/testdata/bad/invalid_indirect_branches.valerr

validate: error: Unsafe use of indirect branch instruction:
	       4:	e12fff15 		bx	r5


validate: error: Unsafe use of indirect branch instruction:
	       c:	e12fff15 		bx	r5


validate: error: Unsafe use of indirect branch instruction:
	      14:	e12fff35 		blx	r5


validate: error: Unsafe use of indirect branch instruction:
	      1c:	e12fff35 		blx	r5


validate: error: Instruction not allowed:
	      24:	e12fff25 		bxj	r5


validate: error: Unsafe use of indirect branch instruction:
	      24:	e12fff25 		bxj	r5


validate: error: Instruction not allowed:
	      2c:	e12fff25 		bxj	r5


validate: error: Unsafe use of indirect branch instruction:
	      2c:	e12fff25 		bxj	r5


validate: error: Unsafe use of non-branch PC update instruction:
	      30:	e28ef042 		add	pc, lr, #66


validate: error: Unsafe use of non-branch PC update instruction:
	      3c:	e1cef00d 		bic	pc, lr, sp

